--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <div class="nav-wrapper">
   <nav class="nav">
     <div>
-      <LinkTo class="nav__item nav__item--title" @route="index">
+      <LinkTo class="nav__item" @route="index">
         Data in Publications
       </LinkTo>
 
