--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,7 +1,7 @@
 <div class="hero-wrapper">
   <div class="hero">
     <h1 class="hero__title hero__title--black">
-      About the «Data in Publications» Guide
+      About the Data in Publications Guide
     </h1>
 
     <div class="hero__text hero__text--small">
