--- a/app/styles/hero.scss
+++ b/app/styles/hero.scss
@@ -26,11 +26,21 @@
     color: $op-blue;
     line-height: 75px;
 
+    @include mobile() {
+      font-size: 48px;
+      line-height: 60px;
+    }
+
     &--black {
       color: $black;
       font-size: 48px;
       line-height: 60px;
       font-weight: normal;
+
+      @include mobile() {
+        font-size: 42px;
+        line-height: 54px;
+      }
     }
   }
 
@@ -41,9 +51,14 @@
     font-size: 26px;
     line-height: 38px;
 
+    @include mobile() {
+      font-size: 22px;
+      line-height: 32px;
+    }
+
     &--small {
-      font-size: 21px;
-      line-height: 30px;
+      font-size: 22px;
+      line-height: 32px;
     }
   }
 
