--- a/app/styles/page.scss
+++ b/app/styles/page.scss
@@ -3,6 +3,10 @@
   padding: 0 25px;
   margin: 100px auto;
 
+  @include mobile() {
+    margin: 25px auto;
+  }
+
   &__title {
     font-size: 48px;
     font-weight: normal;
