--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -14,6 +14,11 @@
     line-height: 38px;
     color: $black;
 
+    @include mobile() {
+      font-size: 26px;
+      line-height: 34px;
+    }
+
     img {
       height: 50px;
       margin-right: 15px;
@@ -66,6 +71,11 @@
       align-items: center;
       margin: 0;
       cursor: pointer;
+
+      @include mobile() {
+        font-size: 22px;
+        line-height: 32px;
+      }
 
       svg {
         margin-left: 20px;
