--- a/app/templates/components/catalog.hbs
+++ b/app/templates/components/catalog.hbs
@@ -11,7 +11,7 @@
 {{#each this.data.topics as |topic|}}
   <div class="section">
     <h2 class="section__title" id={{slug topic.name}}>
-      <img src="/data-in-publications-guide/icons/{{slug topic.icon}}.png" alt={{topic.name}} />
+      <img src="/data-in-publications-guide/icons/{{slug topic.icon}}.svg" alt={{topic.name}} />
 
       <span>
         {{topic.title}}
