--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -94,6 +94,7 @@
       margin: 20px 0;
 
       img {
+        width: 100%;
         border-radius: 3px;
       }
     }
@@ -150,6 +151,10 @@
       padding: 20px;
       font-size: 18px;
       line-height: 26px;
+
+      img {
+        width: 100%;
+      }
 
       p {
         padding: 0 40px;
