Fixed email address

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -35,7 +35,7 @@
 
       <p>
         <strong>Queries and Feedback:</strong><br />
-        <a href="OP-DATA-EUROPA-EU@publications.europa.eu">OP-DATA-EUROPA-EU@publications.europa.eu</a>
+        <a href="mailto: OP-DATA-EUROPA-EU@publications.europa.eu">OP-DATA-EUROPA-EU@publications.europa.eu</a>
       </p>
     </div>
 
