removed slideshow focus

--- a/app/styles/slideshow.scss
+++ b/app/styles/slideshow.scss
@@ -13,6 +13,10 @@
   box-sizing: content-box;
   align-items: center;
 
+  &:focus {
+    background: none;
+  }
+
   &--left {
     left: 0;
     justify-content: left;
