support icon attributes

--- a/app/templates/components/icons/chevron-down.hbs
+++ b/app/templates/components/icons/chevron-down.hbs
@@ -4,6 +4,7 @@
   viewBox="0 0 20 12"
   xmlns="http://www.w3.org/2000/svg"
   xmlns:xlink="http://www.w3.org/1999/xlink"
+  ...attributes
 >
   <polyline stroke-width="2" points="1 1 10 10 19 1"></polyline>
 </svg>
