--- a/app/templates/components/icons/chevron-up.hbs
+++ b/app/templates/components/icons/chevron-up.hbs
@@ -4,6 +4,7 @@
   viewBox="0 0 20 12"
   xmlns="http://www.w3.org/2000/svg"
   xmlns:xlink="http://www.w3.org/1999/xlink"
+  ...attributes
 >
   <polyline stroke-width="2" points="19 11 10 2 1 11"></polyline>
 </svg>
