--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -39,7 +39,7 @@
       </p>
     </div>
 
-    <div>
+    <div class="no-print">
       <p>
         <button type="button" {{on "click" this.copy}}>
           <Icons::FooterLink />
