--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -10,7 +10,7 @@
       the data of your publication more accessible and reusable.
     </div>
 
-    <div class="hero__link">
+    <div class="hero__link no-print">
       <a href="#catalog" {{link-inline}}>
         Explore the guide
         <Icons::ChevronDown />
