--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -58,14 +58,14 @@
       </p>
 
       <p>
-        <a href="#">
+        <a href="./2022-data-in-publications-guide.pdf">
           <Icons::FooterDocument />
           Download guide as checklist
         </a>
       </p>
 
       <p>
-        <a href="#">
+        <a href="./2022-data-in-publications-guide-extended.pdf">
           <Icons::FooterDocuments />
           Download guide with descriptions
         </a>
