--- a/app/styles/hero.scss
+++ b/app/styles/hero.scss
@@ -78,5 +78,13 @@
         stroke-linejoin: round;
       }
     }
+
+    &:hover {
+      color: $black;
+
+      svg polyline {
+        stroke: $black;
+      }
+    }
   }
 }
